kubernetes/apps/infrastructure/emqx/cluster/tcproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/tcproute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: emqx-mqtt
spec:
  parentRefs:
    - name: external
      namespace: network
      sectionName: mqtt-tls
  rules:
    - backendRefs:
        - name: emqx-listeners
          port: 1883
