kubernetes/apps/infrastructure/emqx/cluster/tlsroute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/tlsroute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: emqx-mqtt
spec:
  hostnames:
    - "mqtt.${LIMITED_DOMAIN}"
  parentRefs:
    - name: internal
      namespace: network
      sectionName: mqtt-tls
  rules:
    - backendRefs:
        - name: emqx-listeners
          port: 8883
